--- a/家电篇.md
+++ b/家电篇.md
@@ -1,1 +1,6 @@
-## 家电比较篇
+## 家电尺寸
+-------------------------------------------------------------
+|序号| 名称| 品牌| 型号| 价格| 长 | 宽 | 高 | 预留尺寸|    
+| ---- |----|----|-----|-----|---|----|----|--------|
+|1| 冰箱| 海尔| dd| 1872| 90 | 65 | 180 |92* 60*190 |
+|1| 冰箱| 海尔| dd| 1872| 90 | 65 | 180 |92* 60*190 |
