--- a/家电篇.md
+++ b/家电篇.md
@@ -1,6 +1,6 @@
 ## 家电尺寸
 -------------------------------------------------------------
-|序号| 名称| 品牌| 型号| 价格| 长 | 宽 | 高 | 预留尺寸|    
-| ---- |----|----|-----|-----|---|----|----|--------|
-|1| 冰箱| 海尔| dd| 1872| 90 | 65 | 180 |92* 60*190 |
-|1| 冰箱| 海尔| dd| 1872| 90 | 65 | 180 |92* 60*190 |
+|序号| 名称| 品牌| 型号| 价格|容积| 宽 | 深 | 高 | 预留尺寸|  预算 |  备注|
+| ---- |----|----|-----|-----|--|-|----|----|--------|-----|----|
+|1| 冰箱| 卡萨帝| BCD_542WGCSSM9WYU1 | 6999 -3/21  |542L |908 | 647 | 1775 |948* 600*1800 | | |
+|2| 洗衣机| 西门子| XQG100-WG52A108AW | 3590 -3/21 | 10kg |598 | 590 | 848 |620* 650*860 | | |
