--- a/插座篇.md
+++ b/插座篇.md
@@ -1,22 +1,24 @@
 ## 插座预留
 
 ## 厨房
----------------------------------------
-| 序号| 名称 | 类型| 数量| 离地高度 | 备注|
-|---| ---| ---| ---| -- | -- |
-|1 |冰箱 |三开 | 1个| | |
-|1 |电饭煲 |三开 | 1个| |
-|1 |微波炉 |三开 | 1个| |
-|1 |烤箱 |三开 | 1个| | |
-|1 |电水壶 |三开 | 1个| | |
-|1 |破壁机 |三开 | 1个| | |
-|1 |电饼铛 |三开 | 1个| | |
-|1 |额外小家电 |三开 | 2个| | |
-|1 |洗碗机 |三开 | 1个| | |
-|1 |垃圾处理器 |三开 | 1个| | |
-|1 |净水器 |三开 | 1个| | |
-|1 |软水机 |三开 | 1个| | |
-|1 |小厨宝 |三开 | 1个| | |
-|1 |热水器 |三开 | 1个| | |
-|1 |抽烟机 |三开 | 1个| | |
-|1 |煤气检测 |三开 | 1个| | |
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|冰箱 |三开 | 1个| | |
+|电饭煲 |三开 | 1个| |
+|微波炉 |三开 | 1个| |
+|烤箱 |三开 | 1个| | |
+|电水壶 |三开 | 1个| | |
+|破壁机 |三开 | 1个| | |
+|电饼铛 |三开 | 1个| | |
+|额外小家电 |三开 | 2个| | |
+|洗碗机 |三开 | 1个| | |
+|垃圾处理器 |三开 | 1个| | |
+|净水器 |三开 | 1个| | |
+|软水机 |三开 | 1个| | |
+|小厨宝 |三开 | 1个| | |
+|热水器 |三开 | 1个| | |
+|抽烟机 |三开 | 1个| | |
+|煤气检测 |两开或USB | 1个| | |
+|盛菜额外插座 | 三开 | 2个| | |
+|预留空调插座 | 三开 | 1个| | |
