--- a/插座篇.md
+++ b/插座篇.md
@@ -4,24 +4,25 @@
 ------------------------------------
 | 名称 | 类型| 数量| 离地高度 | 备注|
 | ---| ---| ---| -- | -- |
-|冰箱 |三开 | 1个| | |
-|电饭煲 |三开 | 1个| |
-|微波炉 |三开 | 1个| |
-|烤箱 |三开 | 1个| | |
-|电水壶 |三开 | 1个| | |
-|破壁机 |三开 | 1个| | |
-|电饼铛 |三开 | 1个| | |
-|额外小家电 |三开 | 2个| | |
-|洗碗机 |三开 | 1个| | |
-|垃圾处理器 |三开 | 1个| | |
-|净水器 |三开 | 1个| | |
-|软水机 |三开 | 1个| | |
-|小厨宝 |三开 | 1个| | |
-|热水器 |三开 | 1个| | |
-|抽烟机 |三开 | 1个| | |
-|煤气检测 |两开或USB | 1个| | |
-|盛菜额外插座 | 三开 | 2个| | |
-|预留空调插座 | 三开 | 1个| | |
+|冰箱 |三孔插座 | 1个| 40cm | |
+|电饭煲 |三孔插座 | 1个|台面30cm |
+|微波炉 |三孔插座 | 1个|130cm |
+|烤箱 |三孔插座 | 1个|130cm | |
+|电水壶 |三孔插座 | 1个| 台面30cm| |
+|破壁机 |三孔插座 | 1个| 台面30cm| |
+|电饼铛 |三孔插座 | 1个|台面30cm | |
+|电压力锅|三孔插座| 1个| 台面30cm|  |
+|额外小家电 |三孔插座 | 2个| 台面30cm| |
+|洗碗机 |三孔插座 | 1个|50cm | |
+|垃圾处理器 |三孔插座 | 1个| 50cm| |
+|净水器 |三孔插座 | 1个|50cm| |
+|软水机 |三孔插座 | 1个| 50cm| |
+|小厨宝 |三孔插座 | 1个|50cm | |
+|热水器 |三孔插座 | 1个|台面30cm | |
+|抽烟机 |三孔插座 | 1个| 200cm| |
+|煤气检测 |两孔插座或USB | 1个|200cm | |
+|盛菜额外插座 | 三孔插座 | 2个|台面30c | |
+|预留空调插座 或凉霸 | 三孔插座 | 1个| 凉霸131cm| |
 
 ------------------------------------
                     总计： 20个
