--- a/插座篇.md
+++ b/插座篇.md
@@ -4,25 +4,27 @@
 ------------------------------------
 | 名称 | 类型| 数量| 离地高度 | 备注|
 | ---| ---| ---| -- | -- |
-|冰箱 |三孔插座 | 1个| 40cm | |
+|冰箱 |三孔插座 | 1个| 40cm | 单独回路，和全屋隔开|
 |电饭煲 |三孔插座 | 1个|台面30cm |
-|微波炉 |三孔插座 | 1个|130cm |
-|烤箱 |三孔插座 | 1个|130cm | |
+|微波炉 |三孔插座 | 1个|160cm |
+|烤箱 |三孔插座 | 1个|50cm | |
 |电水壶 |三孔插座 | 1个| 台面30cm| |
 |破壁机 |三孔插座 | 1个| 台面30cm| |
 |电饼铛 |三孔插座 | 1个|台面30cm | |
 |电压力锅|三孔插座| 1个| 台面30cm|  |
 |额外小家电 |三孔插座 | 2个| 台面30cm| |
 |洗碗机 |三孔插座 | 1个|50cm | |
+|预留消毒柜|三孔插座| 1个| 50cm | |
 |垃圾处理器 |三孔插座 | 1个| 50cm| |
 |净水器 |三孔插座 | 1个|50cm| |
 |软水机 |三孔插座 | 1个| 50cm| |
 |小厨宝 |三孔插座 | 1个|50cm | |
-|热水器 |三孔插座 | 1个|台面30cm | |
+|燃气热水器 |三孔插座 | 1个|130cm | |
 |抽烟机 |三孔插座 | 1个| 200cm| |
 |煤气检测 |两孔插座或USB | 1个|200cm | |
 |盛菜额外插座 | 三孔插座 | 2个|台面30c | |
 |预留空调插座 或凉霸 | 三孔插座 | 1个| 凉霸131cm| |
+| 凉霸开关 | 单开关| 1个 | | |
 
 ------------------------------------
-                    总计： 20个
+                    总计： 23个
