--- a/插座篇.md
+++ b/插座篇.md
@@ -24,7 +24,9 @@
 |煤气检测 |两孔插座或USB | 1个|200cm | |
 |盛菜额外插座 | 三孔插座 | 2个|台面30c | |
 |预留空调插座 或凉霸 | 三孔插座 | 1个| 凉霸131cm| |
-| 凉霸开关 | 单开关| 1个 | | |
+|凉霸开关 | 单开关| 1个 | | |
+|橱柜灯预留插座| 两孔开关| 3个| | |
+|厨房灯、水槽灯| 单插 | 2个| |  | 
 
 ------------------------------------
-                    总计： 23个
+                    总计： 28个
