--- a/家电篇.md
+++ b/家电篇.md
@@ -4,7 +4,7 @@
 | ---- |----|----|-----|-----|--|-|----|----|--------|-----|----|
 |1| 冰箱| 卡萨帝| BCD_542WGCSSM9WYU1 | 6999 -3/21  |542L |908 | 647 | 1775 |948* 600*1800 | | |
 |2| 洗衣机| 西门子| XQG100-WG52A108AW | 3590 -3/21 | 10kg |598 | 590 | 848 |620* 650*860 | | |
-| |  |  |    |   |   |  |   |   |   | | |
+|3 | 管线机  |美的  |MG908A-R    | 1499- 3/21  | 1L/分  | 330 | 190  | 415  |   | | |
 | |  |  |    |   |   |  |   |   |   | | |
 | |  |  |    |   |   |  |   |   |   | | |
 | |  |  |    |   |   |  |   |   |   | | |
