--- a/插座篇.md
+++ b/插座篇.md
@@ -29,4 +29,17 @@
 |厨房灯、水槽灯| 单孔接灯 | 2个| |  | 
 
 ------------------------------------
-                    总计： 28个
+总计： 28个 Note： 厨房灯开关留在餐厅
+
+## 餐厅
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|强电盒 |单盒 | 1个| 200cm | 每个回路一个空气开关|
+|弱电盒 |单盒 | 1个|30cm | |
+|弱电盒插座 |三孔插座 | 2个|30cm |光猫路由器 |
+|餐桌旁插座 |五孔插座 | 2个|130cm | 手机充电 、电火锅， 餐桌一边一个|
+|厨房灯开关 | 单开关 | 1个| 130cm| |
+|管线机插座 |三孔插座 | 1个| 130cm| |
+|额外预留插座 |五孔插座 | 2个|130cm | |
+|厨房灯开关|单开关| 1个| 130cm|  |
