--- a/插座篇.md
+++ b/插座篇.md
@@ -24,12 +24,13 @@
 |煤气检测 |两孔插座或USB | 1个|200cm | |
 |盛菜额外插座 | 三孔插座 | 2个|台面30c | |
 |预留空调插座 或凉霸 | 三孔插座 | 1个| 凉霸131cm| |
-|凉霸开关 | 单开关| 1个 | | |
+|凉霸开关 | 单开单控| 1个 | | |
 |橱柜灯预留插座| 两孔开关| 3个| | |
 |厨房灯、水槽灯| 单孔接灯 | 2个| |  | 
 
-------------------------------------
 总计： 28个 Note： 厨房灯开关留在餐厅
+------------------------------------
+
 
 ## 餐厅
 ------------------------------------
@@ -38,8 +39,26 @@
 |强电盒 |单盒 | 1个| 200cm | 每个回路一个空气开关|
 |弱电盒 |单盒 | 1个|30cm | |
 |弱电盒插座 |三孔插座 | 2个|30cm |光猫路由器 |
-|餐桌旁插座 |五孔插座 | 2个|130cm | 手机充电 、电火锅， 餐桌一边一个|
+|餐桌旁插座 |五孔插座 | 2个|110cm | 手机充电 、电火锅， 餐桌一边一个|
 |厨房灯开关 | 单开关 | 1个| 130cm| |
 |管线机插座 |三孔插座 | 1个| 130cm| |
 |额外预留插座 |五孔插座 | 2个|130cm | |
 |厨房灯开关|单开关| 1个| 130cm|  |
+|吊扇开关|单开单控| 1个| 130cm|  |
+|玄关灯开关|单开双控| 1个| 130cm|  **，确认是否要 |
+
+总计：13个
+------------------------------
+
+
+## 玄关
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|玄关灯开关|单开双控| 1个| 130cm|  |
+|夜灯、烘鞋器 |四孔开关 | 1个| 50cm | 每个回路一个空气开关|
+|备用开关 |五孔开关 | 1个| 130cm | |
+
+
+总计：3个
+------------------------------
