--- a/插座篇.md
+++ b/插座篇.md
@@ -22,7 +22,7 @@
 |燃气热水器 |三孔插座 | 1个|130cm | |
 |抽烟机 |三孔插座 | 1个| 200cm| |
 |煤气检测 |两孔插座或USB | 1个|200cm | |
-|盛菜额外插座 | 三孔插座 | 2个|台面30c | |
+|盛菜额外插座 | 三孔插座 | 2个|台面30cm | |
 |预留空调插座 或凉霸 | 三孔插座 | 1个| 凉霸131cm| |
 |凉霸开关 | 单开单控| 1个 | | |
 |橱柜灯预留插座| 两孔开关| 3个| | |
