--- a/插座篇.md
+++ b/插座篇.md
@@ -55,8 +55,8 @@
 ------------------------------------
 | 名称 | 类型| 数量| 离地高度 | 备注|
 | ---| ---| ---| -- | -- |
-|玄关灯开关|单开双控| 1个| 130cm|  |
-|夜灯、烘鞋器 |四孔开关 | 1个| 50cm | 每个回路一个空气开关|
+|玄关灯开关|单开双控| 1个| 130cm| 是否要有 厨房、客厅灯开关 |
+|夜灯、烘鞋器 |四孔开关 | 1个| 50cm | |
 |备用开关 |五孔开关 | 1个| 130cm | 最好有 usb, 可以给门锁、猫眼充电|
 
 
@@ -68,16 +68,14 @@
 ------------------------------------
 | 名称 | 类型| 数量| 离地高度 | 备注|
 | ---| ---| ---| -- | -- |
-|强电盒 |单盒 | 1个| 200cm | 每个回路一个空气开关|
-|弱电盒 |单盒 | 1个|30cm | |
-|弱电盒插座 |三孔插座 | 2个|30cm |光猫路由器 |
-|餐桌旁插座 |五孔插座 | 2个|110cm | 手机充电 、电火锅， 餐桌一边一个|
-|厨房灯开关 | 单开关 | 1个| 130cm| |
-|管线机插座 |三孔插座 | 1个| 130cm| |
-|额外预留插座 |五孔插座 | 2个|130cm | |
-|厨房灯开关|单开关| 1个| 130cm|  |
-|吊扇开关|单开单控| 1个| 130cm|  |
-|玄关灯开关|单开双控| 1个| 130cm|  **，确认是否要 |
+|客厅灯开关 |单开双控 | 1个| 130cm | 一个在客厅墙，一个在阳台墙，考虑三控， 还有一个在玄关|
+|电视机插座 |三孔插座 | 1个| 70cm | |
+| 智能盒子 |三孔插座 | 1个|30cm | |
+| 网线 |有线网口 | 1个| 30cm | |
+| 音箱等家电 | 三孔插座 | 3个| 30cm| |
+| 空调 |三孔插座 | 1个| 200cm| 16A 单独走线|
+| 沙发 |四孔、五孔插座 | 4个|30cm | 一边2个，带USB： 手机、电脑、电热毯、落地灯|
+| 空调开关|单开关| 1个| 130cm|  |
 
 总计：13个
 ------------------------------
