--- a/插座篇.md
+++ b/插座篇.md
@@ -76,6 +76,38 @@
 | 空调 |三孔插座 | 1个| 200cm| 16A 单独走线|
 | 沙发 |四孔、五孔插座 | 4个|30cm | 一边2个，带USB： 手机、电脑、电热毯、落地灯|
 | 空调开关|单开关| 1个| 130cm|  |
+| 监控、电动窗帘|三孔插座| 3个| 200cm|  |
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+
+总计：16个
+------------------------------
+
+
+## 过道
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|过道灯开关、厕所灯开关 |双开单控 | 1个| 130cm | |
+|家政柜预留 |五孔插座 | 3个| 70cm | 吸尘器、挂烫机、工具、内置灯|
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+
+总计：4个
+------------------------------
+
+
+## 客卫
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|洗手台灯 |单灯 | 1个| 130cm | 顶部|
+|厕所灯 |灯 、开关 | 2个| 130cm 、顶部 | |
+| 风暖 |三孔插座 | 1个|顶部| |
+| 洗衣机、烘干机、壁挂洗衣机 |三孔插座 | 3个| 30cm | 要留侧边，不能留正后方|
+| 毛巾架 | 三孔插座 | 1个| 130cm| |
+| 浴室镜 |三孔插座 | 1个| 130cm| |
+| 吹风机、电动牙刷、刮胡刀 |四孔、五孔插座 | 3个|30cm | |
+| 扫地机|三孔插座| 1个| 30cm|  |
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
 
 总计：13个
 ------------------------------
