--- a/插座篇.md
+++ b/插座篇.md
@@ -111,3 +111,19 @@
 
 总计：13个
 ------------------------------
+
+## 次卧
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|次卧灯开关 |单开双控 | 2个| 130cm | 一个在入门口处，一个在床头处|
+|橱柜灯 |灯 、开关 | 2个| 橱柜内部 | |
+|转角插座｜五孔插座 ｜ 2个 ｜ 30cm, 130cm|
+| 床头插座｜五孔、四孔插座｜3个｜一边两个、一边一个与灯开关 手机、电热毯、电脑、加湿器｜
+| 电动窗帘 |三孔插座 | 2个|200cm| |
+| 床尾插座 |三孔插座 | 2个| 30cm | 预留电视插座|
+| 次卧灯 | 单灯 | 1个| 顶部| |
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+
+总计：14个
+------------------------------
