--- a/插座篇.md
+++ b/插座篇.md
@@ -121,9 +121,56 @@
 |转角插座｜五孔插座 ｜ 2个 ｜ 30cm, 130cm|
 | 床头插座｜五孔、四孔插座｜3个｜一边两个、一边一个与灯开关 手机、电热毯、电脑、加湿器｜
 | 电动窗帘 |三孔插座 | 2个|200cm| |
+｜空调插座｜ 三孔插座 ｜ 1个｜ 200cm |16A，单独走线 |
 | 床尾插座 |三孔插座 | 2个| 30cm | 预留电视插座|
 | 次卧灯 | 单灯 | 1个| 顶部| |
 ｜｜ 三孔插座 ｜ 3个｜ 200cm | |
 
-总计：14个
+总计：15个
+------------------------------
+
+## 书房
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|书房灯开关 |单开双控 | 2个| 130cm | 一个在入门口处，一个在床头处|
+|橱柜灯 |灯 、开关 | 2个| 橱柜内部 | |
+|转角插座｜五孔插座 ｜ 2个 ｜ 30cm, 130cm| 如果用电脑肯定要额外的，可以考虑插排|
+| 床头插座｜五孔、四孔插座｜3个｜一边两个、一边一个与灯开关 手机、电热毯、电脑、加湿器｜
+| 床尾插座 |三孔插座 | 1个| 30cm | 预留 |
+| 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
+| 书房灯 | 单灯 | 1个| 顶部| |
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+
+总计：12个
+------------------------------
+
+## 主卫
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|镜前灯开关 |单开双控 | 2个| 130cm | 灯与开关|
+|智能马桶插座 |五孔插座 | 1个| 30cm| 智能马桶、手机充电 |
+|风暖插座｜五孔插座 ｜ 1个 ｜ 200cm | |
+| 洗手池插座｜五孔插座｜1个｜可能的电器，如牙刷等｜
+| 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
+| 主卫灯 | 单灯 | 1个| 顶部| |
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+
+总计：7个
+------------------------------
+
+## 
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|镜前灯开关 |单开双控 | 2个| 130cm | 灯与开关|
+|智能马桶插座 |五孔插座 | 1个| 30cm| 智能马桶、手机充电 |
+|风暖插座｜五孔插座 ｜ 1个 ｜ 200cm | |
+| 洗手池插座｜五孔插座｜1个｜可能的电器，如牙刷等｜
+| 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
+| 主卫灯 | 单灯 | 1个| 顶部| |
+｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+
+总计：7个
 ------------------------------
