--- a/插座篇.md
+++ b/插座篇.md
@@ -155,7 +155,7 @@
 | 洗手池插座｜五孔插座｜1个｜可能的电器，如牙刷等｜
 | 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
 | 主卫灯 | 单灯 | 1个| 顶部| |
-|* | 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：7个
 ------------------------------
