--- a/插座篇.md
+++ b/插座篇.md
@@ -77,7 +77,7 @@
 | 沙发 |四孔、五孔插座 | 4个|30cm | 一边2个，带USB： 手机、电脑、电热毯、落地灯|
 | 空调开关|单开关| 1个| 130cm|  |
 | 监控、电动窗帘|三孔插座| 3个| 200cm|  |
-|* | 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：16个
 ------------------------------
@@ -89,7 +89,7 @@
 | ---| ---| ---| -- | -- |
 |过道灯开关、厕所灯开关 |双开单控 | 1个| 130cm | |
 |家政柜预留 |五孔插座 | 3个| 70cm | 吸尘器、挂烫机、工具、内置灯|
-|* | 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：4个
 ------------------------------
@@ -107,7 +107,7 @@
 | 浴室镜 |三孔插座 | 1个| 130cm| |
 | 吹风机、电动牙刷、刮胡刀 |四孔、五孔插座 | 3个|30cm | |
 | 扫地机|三孔插座| 1个| 30cm|  |
-|* | 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：13个
 ------------------------------
@@ -124,7 +124,7 @@
 ｜空调插座｜ 三孔插座 ｜ 1个｜ 200cm |16A，单独走线 |
 | 床尾插座 |三孔插座 | 2个| 30cm | 预留电视插座|
 | 次卧灯 | 单灯 | 1个| 顶部| |
-|* | 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：15个
 ------------------------------
@@ -140,7 +140,7 @@
 | 床尾插座 |三孔插座 | 1个| 30cm | 预留 |
 | 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
 | 书房灯 | 单灯 | 1个| 顶部| |
-|* | 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：12个
 ------------------------------
