--- a/插座篇.md
+++ b/插座篇.md
@@ -170,7 +170,22 @@
 | 洗手池插座｜五孔插座｜1个｜可能的电器，如牙刷等｜
 | 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
 | 主卫灯 | 单灯 | 1个| 顶部| |
-｜｜ 三孔插座 ｜ 3个｜ 200cm | |
+|* | 三孔插座 | 3个| 200cm | |
+
+总计：7个
+------------------------------
+
+## 阳台
+------------------------------------
+| 名称 | 类型| 数量| 离地高度 | 备注|
+| ---| ---| ---| -- | -- |
+|镜前灯开关 |单开双控 | 2个| 130cm | 灯与开关|
+|智能马桶插座 |五孔插座 | 1个| 30cm| 智能马桶、手机充电 |
+|风暖插座｜五孔插座 ｜ 1个 ｜ 200cm | |
+| 洗手池插座｜五孔插座｜1个｜可能的电器，如牙刷等｜
+| 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
+| 主卫灯 | 单灯 | 1个| 顶部| |
+|* | 三孔插座 | 3个| 200cm | |
 
 总计：7个
 ------------------------------
