--- a/插座篇.md
+++ b/插座篇.md
@@ -160,19 +160,20 @@
 总计：7个
 ------------------------------
 
-## 
+## 主卧
 ------------------------------------
 | 名称 | 类型| 数量| 离地高度 | 备注|
 | ---| ---| ---| -- | -- |
-|镜前灯开关 |单开双控 | 2个| 130cm | 灯与开关|
-|智能马桶插座 |五孔插座 | 1个| 30cm| 智能马桶、手机充电 |
-|风暖插座｜五孔插座 ｜ 1个 ｜ 200cm | |
-| 洗手池插座｜五孔插座｜1个｜可能的电器，如牙刷等｜
+|主卧灯开关 |单开双控 | 3个| 130cm | 灯与开关|
+|主卫灯开关座 |单开单控 | 1个| 130cm| |
+|柜子灯｜五孔插座 ｜ 1个 ｜ 130cm | |
+| 床头灯与插座｜灯+插座｜4个｜2组 开关+插座｜
 | 空调插座 |三孔插座 | 1个| 200cm | 16A，单独走线 |
-| 主卫灯 | 单灯 | 1个| 顶部| |
-|* | 三孔插座 | 3个| 200cm | |
+| 电脑窗帘 | 三孔插座 | 2个| 200cm| |
+| 床头插座 | 五孔插座 | 4个|30cm |两组 四孔+五孔插座 |
+| 床尾插座 | 五孔插座 | 3个|30cm |四孔+五孔插座， 可能的梳妆台灯、台灯、电视、电扇、加湿器等 |
 
-总计：7个
+总计：19个
 ------------------------------
 
 ## 阳台
