--- a/空调设置.md
+++ b/空调设置.md
@@ -4,4 +4,4 @@
 4. 厨房：7.11 = 8
 5. 客厅 + 过道 + 餐厅 + 客卫干区+ 阳台： 20.48 + 7.27 + 5.3 + 3.66 + 8.23 = 45
 
-![](https://pic1.zhimg.com/70/v2-57af23a8cae87bf1168ee5c305195b93_1440w.avis?source=172ae18b&biz_tag=Post)
+![空调匹数](https://pic1.zhimg.com/70/v2-57af23a8cae87bf1168ee5c305195b93_1440w.avis?source=172ae18b&biz_tag=Post)
