--- a/空调 灯设置.md
+++ b/空调 灯设置.md
@@ -14,15 +14,16 @@
 5. 客厅 + 过道 + 餐厅 + 客卫干区+ 阳台： 20.48 + 7.27 + 5.3 + 3.66 + 8.23 = 45  : 3P
 
 灯：
-1. 主卧：22.6
+1. 主卧：20
 2. 主卧阳台：3
 3. 主卫：2.97
-4. 次卧：
-5. 次卧阳台：
-6. 客厅：
-7. 客厅阳台：
-8. 玄关：
-9. 过道：
-10. 客卫干区：
-11. 餐厅：
-12. 厨房：
+4. 书房：10.54
+5. 次卧：13.52
+6. 次卧阳台：3.5
+7. 客厅：20.48
+8. 客厅阳台：5
+9. 玄关：1.4
+10. 过道：3
+11. 客卫干区：3.62
+12. 餐厅：5.3
+13. 厨房：7.11
