--- a/空调 灯设置.md
+++ b/空调 灯设置.md
@@ -13,17 +13,19 @@
 4. 厨房：7.11 = 8 : 1P
 5. 客厅 + 过道 + 餐厅 + 客卫干区+ 阳台： 20.48 + 7.27 + 5.3 + 3.66 + 8.23 = 45  : 3P
 
+![灯瓦数](https://pica.zhimg.com/80/v2-b0b35f5e442bf6629ce8b306b65a8956_720w.jpg?source=1940ef5c)
 灯：
-1. 主卧：20
-2. 主卧阳台：3
-3. 主卫：2.97
-4. 书房：10.54
-5. 次卧：13.52
-6. 次卧阳台：3.5
-7. 客厅：20.48
-8. 客厅阳台：5
-9. 玄关：1.4
-10. 过道：3
-11. 客卫干区：3.62
-12. 餐厅：5.3
-13. 厨房：7.11
+1. 主卧：20  : 80W
+2. 主卧阳台：3 : 10W
+3. 主卫：2.97  : 10W
+4. 书房：10.54 : 25W
+5. 次卧：13.52 : 50W
+6. 次卧阳台：3.5 : 10W
+7. 客厅：20.48 : 80W
+8. 客厅阳台：5 : 13W
+9. 玄关：1.4 : 5W
+10. 过道：3 : 10W
+11. 客卫干区：3.62 : 10W
+12. 餐厅：5.3 : 13W
+13. 厨房：7.11 : 13+12W
+总共： 340W.
