--- a/电路设计.md
+++ b/电路设计.md
@@ -1,33 +1,37 @@
-照明： 房间+1， 客餐厅、阳台、过道+1， 厨卫+1  =3  * 1.5  管内穿线2-4根  12A， C10空开  厨卫带漏报  
-插座：房间+1， 客餐厅、阳台、过道+1， 厨房+1， 客卫+1   = 3*4  管内穿线2-3根 24A， C20\C25空开  1*2.5  管内穿线2-4根 16A， C16  需带漏报
-空调： 主卧+1， 次卧+1， 书房+1， 客餐厅+1，厨房+1   = 2*2 2*4     1* 6 管内穿线2根， 34A, C32空开
-总开： 10平方  C63 2匹
+照明： 房间+1， 客餐厅、阳台、过道+1， 厨卫+1  =3  * 1.5  管内穿线2-4根  12A， C10空开  厨卫带漏报    
+插座：房间+1， 客餐厅、阳台、过道+1， 厨房+1， 客卫+1   = 3*4  管内穿线2-3根 24A， C20\C25空开  1*2.5  管内穿线2-4根 16A， C16  需带漏报  
+空调： 主卧+1， 次卧+1， 书房+1， 客餐厅+1，厨房+1   = 2*2 2*4     1* 6 管内穿线2根， 34A, C32空开  
+总开： 10平方  C63 2匹  
+  
+冰箱 + 监控 + 弱电  +1 单独一路  2.5平方。  
 
-冰箱 + 监控 + 弱电  +1 单独一路  2.5平方。
-
-1.5平方： 12A = 2640W
-2.5平方： 16A = 3520W
-4平方：   24A = 5280W
-6平方：   34A = 7480W
+1.5平方： 12A = 2640W  
+2.5平方： 16A = 3520W  
+4平方：   24A = 5280W  
+6平方：   34A = 7480W  
 
 
-客餐厅： 空调+1， 照明+1， 插座+1
-厨房：照明、插座+1
-客卫：照明插座+1
-主卫：照明插座+1
-卧室：空调+3， 照明+1， 插座+1
+客餐厅： 空调+1， 照明+1， 插座+1  
+厨房：照明、插座+1  
+客卫：照明插座+1  
+主卫：照明插座+1  
+卧室：空调+3， 照明+1， 插座+1  
 
-三孔电器：
-    冰箱、洗碗机、抽烟机、电饭煲、微波炉、烤箱、电水壶、管线机、垃圾处理器、燃气热水器
-    电脑、显示器
-    电视
-    空调
+三孔电器：  
+    冰箱、洗碗机、抽烟机、电饭煲、微波炉、烤箱、电水壶、管线机、垃圾处理器、燃气热水器  
+    电脑、显示器  
+    电视  
+    空调  
     
+  
+两孔：  
+    电风扇  
 
-两孔：
-    电风扇
-
-
+  
 回路设置：
-1. 全屋照明： 1.5m2
+1. 全屋照明： 1.5 m2
 2. 全屋插座：
+3. 各房间空调：2.5 m2 * 3
+4. 客厅空调： 4 m2 * 1
+5. 主客卫： 2.5 m2 * 2， 包括照明
+6. 厨房： 4m2 * 2
